--- a/frontend/src/app/layout/purchase/purchase.component.html
+++ b/frontend/src/app/layout/purchase/purchase.component.html
@@ -67,7 +67,7 @@
                     {{ element.no}}
                 </td>
             </ng-container>
-            <ng-container matColumnDef="t">
+            <ng-container matColumnDef="token">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>T</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.token}}
@@ -79,49 +79,50 @@
                     {{ element.date  | date:  'M/d/yy, h:mm a'}}
                 </td>
             </ng-container>
-            <ng-container matColumnDef="supplier">
+            <ng-container matColumnDef="suppliers_company">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Supplier </th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.supplier }}
+                    {{ element.suppliers_company }}
                 </td>
             </ng-container>
             <ng-container matColumnDef="amount">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Amount</th>
                 <td mat-cell *matCellDef="let element">{{ element.amount | currency: 'INR' }}</td>
             </ng-container>
-            <ng-container matColumnDef="pd">
+            <ng-container matColumnDef="past_due">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>PD</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.pending_due | currency: 'INR' }}
+                    {{ element.past_due | currency: 'INR' }}
                 </td>
             </ng-container>
-            <ng-container matColumnDef="total">
+            <ng-container matColumnDef="total_amount">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Total</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.total | currency: 'INR'}}
+                    {{ element.total_amount | currency: 'INR'}}
+                    <!-- {{ +element.amount + +element.pending_due | currency: 'INR'}} -->
                 </td>
             </ng-container>
             <ng-container matColumnDef="payment">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Payment</th>
                 <td mat-cell *matCellDef="let element">{{ element.payment | currency: 'INR'}}</td>
             </ng-container>
-            <ng-container matColumnDef="td">
+            <ng-container matColumnDef="total_due">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>TD</th>
                 <td mat-cell *matCellDef="let element">{{ element.total_due | currency: 'INR'}}</td>
             </ng-container>
-            <ng-container matColumnDef="op">
+            <ng-container matColumnDef="other_payment">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>OP</th>
                 <td mat-cell *matCellDef="let element">{{ element.other_payment | currency: 'INR' }}</td>
             </ng-container>
-            <ng-container matColumnDef="user">
+            <ng-container matColumnDef="user_name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>User</th>
                 <td mat-cell *matCellDef="let element">{{ element.user_name }}</td>
             </ng-container>
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
-                    <ng-container
-                    *ngIf="loggedInUsersData.user_name === element.user_name && (element.date | date: 'M/d/yy')  ===  (currentDate | date: 'M/d/yy')">
+                    <!-- <ng-container
+                    *ngIf="loggedInUsersData.user_name === element.user_name && (element.date | date: 'M/d/yy')  ===  (currentDate | date: 'M/d/yy')"> -->
                     <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
                         (click)="onEditNewCustomers(element)">
                         <mat-icon aria-label="Edit">edit</mat-icon>
@@ -130,7 +131,7 @@
                     [color]="tableParams.active? 'warn': 'primary'" (click)="changeStatus(element.id)">
                     <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}</mat-icon>
                 </button>
-            </ng-container>
+            <!-- </ng-container> -->
                 </td>
             </ng-container>
             <ng-container matColumnDef="print">
