--- a/frontend/src/app/layout/suppliers/suppliers.component.html
+++ b/frontend/src/app/layout/suppliers/suppliers.component.html
@@ -51,7 +51,7 @@
             <ng-container matColumnDef="suppliers_total_due">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Total Due</th>
                 <td mat-cell *matCellDef="let element">
-                    {{element.purchase_price - element.purchase_payment | currency: 'INR'  }}
+                    {{element.suppliers_total_due | currency: 'INR'  }}
                 </td>
             </ng-container>
             <ng-container matColumnDef="action">
