--- a/frontend/src/app/layout/purchase/purchase.component.html
+++ b/frontend/src/app/layout/purchase/purchase.component.html
@@ -108,7 +108,7 @@
             </ng-container>
             <ng-container matColumnDef="total_due">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>TD</th>
-                <td mat-cell *matCellDef="let element">{{ element.total_due | currency: 'INR'}}</td>
+                <td mat-cell *matCellDef="let element">{{ element.total_amount - element.payment  | currency: 'INR'}}</td>
             </ng-container>
             <ng-container matColumnDef="other_payment">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>OP</th>
@@ -124,7 +124,7 @@
                     <!-- <ng-container
                     *ngIf="loggedInUsersData.user_name === element.user_name && (element.date | date: 'M/d/yy')  ===  (currentDate | date: 'M/d/yy')"> -->
                     <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
-                        (click)="onEditNewCustomers(element)">
+                        (click)="onEditNewPurchase(element)">
                         <mat-icon aria-label="Edit">edit</mat-icon>
                     </button>
                     <button mat-icon-button [matTooltip]="tableParams.active? 'Click to de-active': 'Click to Active'"
