--- a/frontend/src/app/layout/sales/add-sales/add-sales.component.html
+++ b/frontend/src/app/layout/sales/add-sales/add-sales.component.html
@@ -52,7 +52,7 @@
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
-                <mat-spinner class="loader" *ngIf="selectItemLoader" diameter="20"></mat-spinner>
+                <mat-spinner class="loader" *ngIf="!selectItemLoader" diameter="20"></mat-spinner>
             </div>
             <!-- qty start -->
             <div class="block">
