--- a/frontend/src/app/layout/items/add-item/add-item.component.html
+++ b/frontend/src/app/layout/items/add-item/add-item.component.html
@@ -230,7 +230,8 @@
                     (click)="supplierFillForm(element.suppliers_id)">
                     <mat-icon aria-label="Edit">edit</mat-icon>
                 </button>
-                <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="confirmDialog(element.id)">
+                <button mat-icon-button matTooltip="Click to Delete" color="warn"
+                    (click)="itemSupplierDelete(element.id)">
                     <mat-icon aria-label="Delete">delete</mat-icon>
                 </button>
             </td>
