--- a/frontend/src/app/layout/items/items.component.scss
+++ b/frontend/src/app/layout/items/items.component.scss
@@ -25,9 +25,11 @@ table {
     font-size: 13px;
     height: 33px;
 }
-.icon{
+
+.icon {
     vertical-align: text-top;
 }
+
 .header {
     display: flex;
     align-items: center;
@@ -39,14 +41,14 @@ tr.mat-row {
     height: 40px;
 }
 
+tr.mat-header-row,
+tr.mat-row {
+    height: 40px;
+}
+
 th {
     color: rgb(0, 0, 0);
     font-size: 15px;
-}
-
-td.mat-cell {
-    padding: 0 5px 0 0;
-
 }
 
 td {
