--- a/frontend/src/app/layout/purchase/purchase.component.html
+++ b/frontend/src/app/layout/purchase/purchase.component.html
@@ -2,22 +2,23 @@
     <mat-spinner *ngIf="loader" class="loader" diameter="40"></mat-spinner>
     <div class="header">
         <div>
-                  <!-- Select date range -->
-                  <mat-form-field class="field-width margin">
-                    <mat-label>Select date range</mat-label>
-                    <mat-date-range-input [rangePicker]="picker">
-                        <input matStartDate [(ngModel)]="fromDate" placeholder="Start date">
-                        <input matEndDate [(ngModel)]="toDate" placeholder="End date">
-                    </mat-date-range-input>
-                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-date-range-picker #picker></mat-date-range-picker>
-                </mat-form-field>
+            <!-- Select date range -->
+            <mat-form-field class="field-width margin">
+                <mat-label>Select date range</mat-label>
+                <mat-date-range-input [rangePicker]="picker">
+                    <input matStartDate [(ngModel)]="fromDate" placeholder="Start date">
+                    <input matEndDate [(ngModel)]="toDate" placeholder="End date">
+                </mat-date-range-input>
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-date-range-picker #picker></mat-date-range-picker>
+            </mat-form-field>
 
             <!-- All supplier -->
             <mat-form-field class="margin field-width">
                 <mat-label>All Suppliers</mat-label>
-                <mat-select name="tier" [(ngModel)]="selectSupplierId" (selectionChange)="toggleCreateAddPurchaseButton()">
-                    <mat-option >All suppliers</mat-option>
+                <mat-select name="tier" [(ngModel)]="selectSupplierId"
+                    (selectionChange)="toggleCreateAddPurchaseButton()">
+                    <mat-option>All suppliers</mat-option>
                     <mat-option *ngFor="let supplier of suppliers" [value]="supplier.id"
                         (click)="toggleCreateAddPurchaseButton();">
                         {{supplier.company | uppercase}}
@@ -25,31 +26,33 @@
                 </mat-select>
                 <mat-spinner class="selectSupplierLoader" *ngIf="selectSupplierLoader" diameter="20"></mat-spinner>
             </mat-form-field>
-        <!-- All user -->
-        <mat-form-field class="field-width margin">
-         <mat-label>All User</mat-label>
-         <mat-select [(ngModel)]="userId">
-             <mat-option value="0">--Select--</mat-option>
-             <mat-option *ngFor="let user of userData" [value]="user.id">
-                 {{user.user_name}}
-             </mat-option>
-         </mat-select>
-     </mat-form-field>
-       <!-- search  -->
-       <mat-form-field class="field-width">
-        <mat-label>Search...</mat-label>
-        <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getPurchase()">
-    </mat-form-field>
-    <button color="primary" class="margin btn" mat-raised-button (click)="getPurchase()">
-        Search
-    </button>
-     <!-- download  -->
+            <!-- All user -->
+            <mat-form-field class="field-width margin">
+                <mat-label>All User</mat-label>
+                <mat-select [(ngModel)]="userId">
+                    <mat-option value="0">--Select--</mat-option>
+                    <mat-option *ngFor="let user of userData" [value]="user.id">
+                        {{user.user_name}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <!-- search  -->
+            <mat-form-field class="field-width">
+                <mat-label>Search...</mat-label>
+                <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getPurchase()">
+            </mat-form-field>
+            <button color="primary" class="margin btn" mat-raised-button (click)="getPurchase()">
+                Search
+            </button>
+            <!-- add new purchase button -->
+            <button color="primary" class="margin btn" mat-raised-button *ngIf="!isShowAddPurchase"
+                (click)="onAddNewPurchase()">
+                Add New Purchase
+            </button>
+            <!-- download  -->
             <button color="primary" class="margin btn" mat-raised-button>
                 <mat-icon class="icon">cloud_download</mat-icon>
                 Download
-            </button>
-            <button color="primary" class="margin btn" mat-raised-button *ngIf="!isShowAddPurchase" (click)="onAddNewPurchase()">
-                Add New Purchase
             </button>
         </div>
         <div>
@@ -76,7 +79,7 @@
             <ng-container matColumnDef="date">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.date  | date:  'M/d/yy, h:mm a'}}
+                    {{ element.date | date: 'M/d/yy, h:mm a'}}
                 </td>
             </ng-container>
             <ng-container matColumnDef="suppliers_company">
@@ -108,7 +111,8 @@
             </ng-container>
             <ng-container matColumnDef="total_due">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>TD</th>
-                <td mat-cell *matCellDef="let element">{{ element.total_amount - element.payment  | currency: 'INR'}}</td>
+                <td mat-cell *matCellDef="let element">{{ element.total_amount - element.payment | currency: 'INR'}}
+                </td>
             </ng-container>
             <ng-container matColumnDef="other_payment">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>OP</th>
@@ -128,10 +132,10 @@
                         <mat-icon aria-label="Edit">edit</mat-icon>
                     </button>
                     <button mat-icon-button [matTooltip]="tableParams.active? 'Click to de-active': 'Click to Active'"
-                    [color]="tableParams.active? 'warn': 'primary'" (click)="changeStatus(element.id)">
-                    <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}</mat-icon>
-                </button>
-            <!-- </ng-container> -->
+                        [color]="tableParams.active? 'warn': 'primary'" (click)="changeStatus(element.id)">
+                        <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}</mat-icon>
+                    </button>
+                    <!-- </ng-container> -->
                 </td>
             </ng-container>
             <ng-container matColumnDef="print">
