--- a/frontend/src/app/layout/user/user.component.html
+++ b/frontend/src/app/layout/user/user.component.html
@@ -62,10 +62,13 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
-                    <button *ngIf="tableParams.active" mat-icon-button matTooltip="Click to Edit" color="primary"
+                    <!-- <ng-container *ngIf="loggedInUser.user_name === element.user_name"> -->
+
+                        <button *ngIf="tableParams.active"  mat-icon-button matTooltip="Click to Edit" color="primary"
                         type="button" (click)="onEditNewUser(element)">
                         <mat-icon aria-label="Edit">edit</mat-icon>
                     </button>
+           <!-- //     </ng-container> -->
                     <ng-container *ngIf="+element.balance === 0">
                         <button *ngIf="isLoggedInUserIsOwner" mat-icon-button
                             matTooltip="{{tableParams.active? 'Click to de-active': 'Click to Active'}}"
