--- a/frontend/src/app/layout/purchase/add-purchase/add-purchase.component.html
+++ b/frontend/src/app/layout/purchase/add-purchase/add-purchase.component.html
@@ -184,7 +184,7 @@
             formControlName="remarks"></textarea>
         </div>
         <div class="payment">
-            <div class="width">
+            <div class="float">
                 <mat-form-field>
                     <mat-label>Grand Total (₹) </mat-label>
                     <input matInput disable matTooltip="Not Editable"
@@ -192,6 +192,9 @@
                         />
                 </mat-form-field>
             </div>
+            <br>
+            <br>
+            <br>
             <div class="width">
                 <div class="flex">
                     <span>
