--- a/frontend/src/app/layout/sales/add-sales/add-sales.component.scss
+++ b/frontend/src/app/layout/sales/add-sales/add-sales.component.scss
@@ -113,3 +113,8 @@ mat-spinner{
     margin-top: 23px;
     margin-right: 14px;
 }
+
+mat-slide-toggle {
+    margin: 8px 0;
+    display: block;
+  }
