--- a/frontend/src/app/layout/sales/add-sales/add-sales.component.html
+++ b/frontend/src/app/layout/sales/add-sales/add-sales.component.html
@@ -54,6 +54,9 @@
                 </mat-form-field>
                 <mat-spinner class="loader" *ngIf="!selectItemLoader" diameter="20"></mat-spinner>
             </div>
+
+            <!-- toggle button -->
+            <!-- <mat-slide-toggle [(ngModel)]="isChecked">Slide Toggle Checked: {{isChecked}}</mat-slide-toggle> -->
             <!-- qty start -->
             <div class="block">
                 <mat-form-field class="input_width">
@@ -182,14 +185,7 @@
                     <textarea matInput class="padding" id="" cdkAutosizeMinRows="8" cdkAutosizeMaxRows="8"
                         placeholder="Enter Remarks..." formControlName="remarks"></textarea>
                 </mat-form-field>
-                 <div>
-                <ng-container *ngIf="
-                formBill.controls.remarks.touched &&
-                !formBill.controls.remarks.value
-            ">
-                    <span class="error">Remarks is Required</span>
-                </ng-container>
-            </div>
+                v
             </div>
             <div class="payment">
                 <div class="float">
