--- a/frontend/src/app/layout/purchase/purchase.component.scss
+++ b/frontend/src/app/layout/purchase/purchase.component.scss
@@ -12,7 +12,7 @@ table {
     left: 45%;
 }
 
-.selectSupplierLoader {
+.selectDropDownLoader {
     position: absolute;
     top: 2px;
     float: right;
