--- a/frontend/src/app/layout/sales/sales.component.html
+++ b/frontend/src/app/layout/sales/sales.component.html
@@ -2,6 +2,30 @@
     <mat-spinner *ngIf="loader" class="loader" diameter="40"></mat-spinner>
     <div class="header">
         <div>
+            <!-- Select date range -->
+            <mat-form-field class="field-width margin">
+                <mat-label>Select date range</mat-label>
+                <mat-date-range-input [rangePicker]="picker">
+                    <input matStartDate [(ngModel)]="fromDate" placeholder="Start date">
+                    <input matEndDate [(ngModel)]="toDate" placeholder="End date">
+                </mat-date-range-input>
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-date-range-picker #picker></mat-date-range-picker>
+            </mat-form-field>
+            <!-- All user -->
+            <ng-container *ngIf="loggedInUsersData.role !== 'Employees'">
+                <mat-form-field class="field-width margin">
+                    <mat-label>All Users</mat-label>
+                    <mat-select [(ngModel)]="userId">
+                        <mat-option value="0">--Select--</mat-option>
+                        <mat-option *ngFor="let user of userData" [value]="user.id">
+                            {{user.user_name}}
+                        </mat-option>
+                    </mat-select>
+                    <mat-spinner class="selectCustomerLoader" *ngIf="selectUserLoader" diameter="20"></mat-spinner>
+                </mat-form-field>
+            </ng-container>
+            <!-- search  -->
             <mat-form-field class="field-width">
                 <mat-label>Search...</mat-label>
                 <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getSales()">
@@ -9,9 +33,13 @@
             <button color="primary" class="margin btn" mat-raised-button (click)="getSales()">
                 Search
             </button>
+            <button color="primary" class="margin btn" mat-raised-button (click)="clearSearch()">
+                Clear Search
+            </button>
             <mat-form-field class="margin field-width">
                 <mat-label>Select Customer</mat-label>
-                <mat-select name="customer" [(ngModel)]="selectedCustomerId" (selectionChange)="toggleCreateAddSalesButton();">
+                <mat-select name="customer" [(ngModel)]="selectedCustomerId"
+                    (selectionChange)="toggleCreateAddSalesButton();">
                     <mat-option>All Customer</mat-option>
                     <mat-option *ngFor="let customer of customers" [value]="customer.id">
                         {{customer.company | uppercase}}
