--- a/frontend/src/app/layout/suppliers/suppliers.component.html
+++ b/frontend/src/app/layout/suppliers/suppliers.component.html
@@ -2,12 +2,26 @@
     <mat-spinner *ngIf="loader" class="loader" diameter="40"></mat-spinner>
     <div class="header">
         <div>
+            <!-- Select date range -->
+            <mat-form-field class="field-width margin">
+                <mat-label>Select date range</mat-label>
+                <mat-date-range-input [rangePicker]="picker">
+                    <input matStartDate [(ngModel)]="fromDate" placeholder="Start date">
+                    <input matEndDate [(ngModel)]="toDate" placeholder="End date">
+                </mat-date-range-input>
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-date-range-picker #picker></mat-date-range-picker>
+            </mat-form-field>
+            <!-- search  -->
             <mat-form-field class="field-width">
                 <mat-label>Search...</mat-label>
                 <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getSuppliers()">
             </mat-form-field>
             <button color="primary" class="margin btn" mat-raised-button (click)="getSuppliers()">
                 Search
+            </button>
+            <button color="primary" class="margin btn" mat-raised-button (click)="clearSearch()">
+                Clear Search
             </button>
             <button color="primary" class="margin btn" mat-raised-button (click)="onAddNewSuppliers()">
                 Add Suppliers
@@ -51,7 +65,7 @@
             <ng-container matColumnDef="suppliers_total_due">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Total Due</th>
                 <td mat-cell *matCellDef="let element">
-                    {{element.suppliers_total_due | currency: 'INR'  }}
+                    {{element.suppliers_total_due | currency: 'INR' }}
                 </td>
             </ng-container>
             <ng-container matColumnDef="action">
