--- a/frontend/src/app/layout/transfer/transfer.component.html
+++ b/frontend/src/app/layout/transfer/transfer.component.html
@@ -16,28 +16,28 @@
             </mat-form-field>
 
             <ng-container *ngIf="loggedInUserRole !== 'Employees'">
-            <!-- from user -->
-            <mat-form-field class="field-width margin">
-                <mat-label>From User</mat-label>
-                <mat-select [(ngModel)]="fromUserId">
-                    <mat-option value="0">--Select--</mat-option>
-                    <mat-option *ngFor="let user of users" [value]="user.id">
-                        {{user.user_name}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-            <!-- to user -->
-            <mat-form-field class="field-width margin">
-                <mat-label>To User </mat-label>
+                <!-- from user -->
+                <mat-form-field class="field-width margin">
+                    <mat-label>From User</mat-label>
+                    <mat-select [(ngModel)]="fromUserId" (selectionChange)="getTransfer()">
+                        <mat-option value="0">--Select--</mat-option>
+                        <mat-option *ngFor="let user of users" [value]="user.id">
+                            {{user.user_name}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <!-- to user -->
+                <mat-form-field class="field-width margin">
+                    <mat-label>To User </mat-label>
 
-                <mat-select [(ngModel)]="toUserId">
-                    <mat-option value="0">--Select--</mat-option>
-                    <mat-option *ngFor="let user of users" [value]="user.id">
-                        {{user.user_name}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-        </ng-container>
+                    <mat-select [(ngModel)]="toUserId" (selectionChange)="getTransfer()">
+                        <mat-option value="0">--Select--</mat-option>
+                        <mat-option *ngFor="let user of users" [value]="user.id">
+                            {{user.user_name}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </ng-container>
             <!-- search  -->
             <mat-form-field class="field-width margin">
                 <mat-label>Search...</mat-label>
@@ -99,7 +99,7 @@
             </ng-container>
             <ng-container matColumnDef="toUserName">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>To User</th>
-                <td mat-cell *matCellDef="let element">{{ element.toUserName | uppercase  }}</td>
+                <td mat-cell *matCellDef="let element">{{ element.toUserName | uppercase }}</td>
             </ng-container>
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
