--- a/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.scss
+++ b/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.scss
@@ -105,10 +105,21 @@ tr.mat-row {
     margin-right: 10px;
 }
 .loader {
-    bottom: 45px;
+    bottom: -12px;
     float: right;
-    right: 30px;
+    right: 60px;
 }
 mat-spinner{
     margin: 7px;
 }
+.uppercase{
+    text-transform: uppercase;
+}
+.checkbox-margin{
+    margin-top: 23px;
+    margin-right: 14px;
+}
+.float{
+    float:right;
+}
+
