--- a/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
+++ b/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
@@ -13,6 +13,17 @@
                     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-date-range-picker #picker></mat-date-range-picker>
                 </mat-form-field>
+                <!-- category start -->
+                <mat-form-field class="margin field-width">
+                    <mat-label>Select Tier</mat-label>
+                    <mat-select name="tier" [(ngModel)]="tireId" (selectionChange)="toggleCreateButton(); getSalesQuotation()">
+                        <mat-option value=''>All Tires</mat-option>
+                        <mat-option *ngFor="let tire of tires" [value]="tire.id" >
+                            {{tire.code | uppercase}}
+                        </mat-option>
+                    </mat-select>
+                    <mat-spinner class="selectTierLoader" *ngIf="selectTireLoader" diameter="20"></mat-spinner>
+                </mat-form-field>
                 <!-- search text box  -->
                 <mat-form-field class="field-width">
                     <mat-label>Search...</mat-label>
@@ -26,22 +37,12 @@
                 <button color="primary" class="margin btn" mat-raised-button (click)="clearSearch()">
                     Clear Search
                 </button>
-                <!-- category start -->
-                <mat-form-field class="margin field-width">
-                    <mat-label>Select Tier</mat-label>
-                    <mat-select name="tier" [(ngModel)]="tireName">
-                        <mat-option value="" (click)="toggleCreateButton()">All Tires</mat-option>
-                        <mat-option *ngFor="let tire of tires" [value]="tire.code" (click)="toggleCreateButton()">
-                            {{tire.code}}
-                        </mat-option>
-                    </mat-select>
-                    <mat-spinner class="selectTierLoader" *ngIf="selectTireLoader" diameter="25"></mat-spinner>
-                </mat-form-field>
+
                 <button color="primary" class="margin btn" mat-raised-button>
                     <mat-icon class="icon">cloud_download</mat-icon>
                     Download
                 </button>
-                <button color="primary" class="margin btn" mat-raised-button *ngIf="!isShow"
+                <button color="primary" class="margin btn" mat-raised-button *ngIf="isShow"
                     (click)="onAddNewCreateQuotation()">
                     Add Create Qutation
                 </button>
@@ -103,7 +104,7 @@
                 </ng-container>
                 <ng-container matColumnDef="tier">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Tier</th>
-                    <td mat-cell *matCellDef="let element">{{ element.tier | titlecase }}</td>
+                    <td mat-cell *matCellDef="let element">{{ element.tier_code | titlecase }}</td>
                 </ng-container>
                 <ng-container matColumnDef="user">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>User</th>
