--- a/frontend/src/app/layout/sales/add-sales/add-sales.component.html
+++ b/frontend/src/app/layout/sales/add-sales/add-sales.component.html
@@ -61,7 +61,7 @@
             <div class="block">
                 <mat-form-field class="input_width">
                     <mat-label>Qty.</mat-label>
-                    <input matInput formControlName="qty" type="number"/>
+                    <input matInput formControlName="qty" type="tel"  maxlength="4"/>
                 </mat-form-field>
             </div>
             <!-- available start -->
