--- a/frontend/src/app/layout/sales/sales.component.html
+++ b/frontend/src/app/layout/sales/sales.component.html
@@ -169,7 +169,7 @@
                 <th mat-header-cell *matHeaderCellDef>Print</th>
                 <td mat-cell *matCellDef="let element">
                     <button mat-icon-button matTooltip="Click to PRINT" color="primary" type="button"
-                        (click)="print(element)">
+                        (click)="getPrintData(element.id);newWindow(); ">
                         <mat-icon aria-label="print" color="primary">print</mat-icon>
                     </button>
                 </td>
@@ -184,5 +184,146 @@
         <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons
             (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
         </mat-paginator>
+    </div>
+</div>
+<!-- print start -->
+<div *ngIf="isPrintHide" >
+    <div id="print">
+        <div style="display: flex; justify-content: space-around;">
+            <!-- <ng-container *ngFor="let item of saleItems; let i = index"> -->
+            <span style="border: 1px solid black; padding:0 5px 0 0 ;
+                         font-size: 14pxs; width: 1230px; margin: 0 5px;">
+                <div style="display: flex; justify-content: space-between;">
+                    <div>
+                        <b>{{customer | uppercase}} </b><br />
+                        {{ tier | uppercase}}
+                    </div>
+
+                    <div>
+                        <b style="float: right;">No #:- {{token}} </b> <br>
+                        {{currentDate| date: 'd-MM '}} &nbsp; <b>{{ userName | uppercase}}</b>
+                    </div>
+                </div>
+
+
+                <div style="display: flex; font-weight: bold; border-top: 1px solid black">
+                    <div style="margin-right: 16px">No.</div>
+                    <div style="margin-right: 32px">Item </div>
+                    <div style="margin-right: 13px">#</div>
+                    <div style="margin-right: 26px">Qty</div>
+                    <div style="margin-right: 11px">#</div>
+                    <div style="margin-right: 21px">Price </div>
+                    <div style="margin: 0 0  0 auto">Amount </div>
+                </div>
+                <ng-container *ngFor="let item of saleItems; let i = index">
+                    <div a-for style="display: flex; border-top: 1px solid black;">
+                        <div style="  width:30px; margin: 0 8px 0 0;">{{i +1 }}</div>
+                        <div style="width:55px; margin: 0 8px 0 0;">{{ item.item_item_code}}</div>
+                        <input style="width: 12px;   margin: 0 8px 0 0;" type="checkbox">
+                        <div style="width:45px; margin: 0 8px 0 0;">{{item.sales_bill_qty
+                        }}</div>
+                        <input style="width: 12px;  margin: 0 8px 0 0;" type="checkbox">
+                        <div style="  width:42px; margin: 0 8px 0 0">{{item.sales_bill_selling_price
+                        }}</div>
+                        <div style="margin-left:auto;">{{+item.sales_bill_qty
+                            * +item.sales_bill_selling_price
+                            | currency: 'INR'}}</div>
+                    </div>
+           </ng-container>
+
+                <div style="border-top: 1px solid black;"></div>
+                <div style="display: flex; justify-content: space-between;">
+                    <div><b>Total Qty: {{totalQty}}</b></div>
+                    <br>
+                    <div>
+                        <div>
+                            <b>Total: {{total | currency: 'INR'}}</b>
+                        </div>
+                    </div>
+                </div>
+                <div style="float: right;">
+                    LB Due {{lastDue | currency: 'INR'}}
+                </div>
+                <br>
+                <div style="border-top: 2px solid black;"></div>
+                <div style="display: flex; justify-content: space-between;">
+                    <div>
+                        <div><b> SP:</b> ___________ </div>
+                        <div><b> Verifier:</b> ___________ </div>
+                    </div>
+                    <div>
+                        <div style="float: right; "><b> Grand Total :{{+total + +lastDue | currency: 'INR'}}</b></div><br>
+                        <div style="float: right;">Payment: {{payment | currency: 'INR'}}</div><br>
+                        <div style="float: right;">Other Payment: {{other_payment | currency: 'INR'}}</div><br>
+                    </div>
+                </div>
+                <div style="border-top: 2px solid black;">
+                    <div style="float: right;">
+                        <b> Total Due:  {{+total + +lastDue - +payment  | currency: 'INR'}}</b>
+                    </div><br>
+                    <div>
+                        <b>Remarks:</b>{{remarks}}
+                    </div>
+                </div>
+            </span>
+
+
+            <span style="border: 1px solid black; padding: 5px; font-size: 14pxs; width: 1230px; margin: 0 0 0 5px;">
+                <div style="display: flex; justify-content: space-between;">
+                    <div>
+                        <b>{{customer | uppercase}} </b><br />
+                        {{tier | uppercase}}
+                    </div>
+
+                    <div>
+                        <b style="float: right;">No #:- {{token}} </b> <br>
+                        {{currentDate | date: 'd-MM '}} &nbsp; <b>{{userName | uppercase}}</b>
+                    </div>
+                </div>
+
+
+                <div style="display: flex; font-weight: bold; border-top: 1px solid black">
+                    <div style="margin-right: 16px">No.</div>
+                    <div style="margin-right: 32px">Item </div>
+                    <div style="margin-right: 27px">Qty</div>
+                    <div style="margin-right: 31px">Price </div>
+                    <div style="margin: 0 0 0 auto;">Amount </div>
+                </div>
+          <ng-container *ngFor="let item of saleItems; let i = index">
+                    <div a-for style="display: flex; border-top: 1px solid black;">
+                        <div style="width:30px; margin: 0 8px 0 0;   ">{{1 }}</div>
+                        <div style="  width:55px; margin: 0 8px 0 0;">{{item.item_item_code}}</div>
+                        <div style="  width:45px; margin: 0 8px 0 0;">{{item.sales_bill_qty}}</div>
+                        <div style=" width:42px; margin: 0 8px 0 0;">{{item.sales_bill_selling_price}}</div>
+                        <div style="margin-left:  auto">{{+item.sales_bill_qty * +item.sales_bill_selling_price | currency: 'INR'}}</div>
+                    </div>
+              </ng-container>
+                <div style="border-top: 1px solid black;"></div>
+                <div style="display: flex; justify-content: space-between;">
+                    <div><b>Total Qty: {{totalQty}}</b></div>
+                    <br>
+                    <div>
+                        <div>
+                            <b>Total: {{total | currency: 'INR'}}</b>
+                        </div>
+                    </div>
+                </div>
+                <div style="float: right;">
+                    LB Due {{lastDue | currency: 'INR'}}
+                </div>
+                <br>
+                <div style="border-top: 2px solid black;"></div>
+                <div style="float: right; "><b> Grand Total : {{+total + +lastDue | currency: 'INR'}}</b></div><br>
+                <div style="float: right;">Payment: {{payment | currency: 'INR'}}</div><br>
+                <div style="float: right;">Other Payment: {{other_payment | currency: 'INR'}}</div><br>
+                <div style="border-top: 2px solid black;">
+                    <div style="float: right;">
+                        <b> Total Due: {{+total + +lastDue - +payment  | currency: 'INR'}}</b>
+                    </div><br>
+                </div>
+
+            </span>
+        <!-- </ng-container> -->
+        </div>
     </div>
 </div>
